# IT-Tool-Lernscript

./: Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
app/: db.py  main.py  models.py  pdf_generator.py  pdf_style.py
app/services/: auth.py  claude_service.py  pdf_generator.py  quota.py
docs/: ARCHITEKTUR.md  DEPLOYMENT.md
lernscript-tool/: README.md  requirements.txt
lernscript-tool/app/services/: claude_service.py  pdf_generator.py  pdf_parser.py  quota.py
lernscript-tool/docs/: ARCHITEKTUR.md  STYLE_GUIDE.md
lernscript-tool/templates/: index.html
lernscript-tool/tests/: test_pdf_generation.py  test_quota.py
scripts/: backup.sh  index.html  login.html  register.html
templates/: datenschutz.html  impressum.html  login.html  register.html
tests/: __init__.py  conftest.py  test_auth.py  test_claude_chunking.py  test_legal_pages.py  test_markup_safety.py  test_multi_upload.py  test_pdf_parser.py
