[project]
name = "lernscript-generator"
version = "0.1.0"
description = "Kursmodul-PDF -> KI-generiertes Lernscript im WBS-Stil"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes (Basis), I: Import-Sortierung,
# B: bugbear (typische Fehlerquellen), UP: veraltete Syntax modernisieren
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",  # Zeilenlänge: von line-length-Formatierung abgedeckt, Kommentare dürfen länger sein
    "B008",  # FastAPI-Idiom: File(...)/Form(...) als Argument-Default ist dort die vorgesehene API
]

[tool.ruff.lint.per-file-ignores]
# Tests: Import nach monkeypatch.setenv ist dort Absicht (Modul-Reload-Pattern)
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
